--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,20 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-Do List</title>
 </head>
 <body>
-       This is a template 
-       <ul>
-        {% for item in listValue %}
+    <h1>To-Do List</h1>
+    <a href="{{ url_for('add_task') }}">Add Task</a>
+    <ul>
+        {% for task in tasks %}
         <li>
-            hello {{item}}
+            {{ task.name }}
+            <a href="{{ url_for('edit_task', id=task.id) }}">Edit</a>
+            <a href="{{ url_for('delete_task', id=task.id) }}">Delete</a>
         </li>
         {% endfor %}
-       </ul>
+    </ul>
 </body>
 </html>
